--- a/exercise-04/package.json
+++ b/exercise-04/package.json
@@ -7,12 +7,10 @@
     "license": "ISC",
     "scripts": {
         "start": "ts-node ./src/index.ts",
-        "test": "jest",
+        "test": "jest --verbose",
         "test:coverage": "jest --coverage"
     },
     "devDependencies": {
-        "@babel/preset-env": "^7.16.4",
-        "@babel/preset-typescript": "^7.16.0",
         "@types/jest": "^27.0.3",
         "@typescript-eslint/eslint-plugin": "^5.6.0",
         "@typescript-eslint/parser": "^5.6.0",
@@ -21,6 +19,7 @@
         "eslint-plugin-prettier": "^4.0.0",
         "jest": "^27.4.4",
         "prettier": "^2.5.1",
+        "ts-jest": "^27.1.1",
         "ts-node": "^10.4.0",
         "typescript": "^4.5.3"
     }
